# Aigen

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  enterprise-optimization.md  mvnw  pom.xml  puppeteer-config.json
Aigen/: pom.xml
aiegn-java-core/: Dockerfile.java  pom.xml
aiegn-java-core/src/main/resources/: application.yml
aigen-frontend/: package-lock.json
aigen-frontend/src/store/: auth.ts
aigen-python-ai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
aigen-python-ai/app/: __init__.py  config.py  main.py
aigen-python-ai/app/api/: __init__.py  deps.py  router.py
aigen-python-ai/app/api/endpoints/: __init__.py  chat.py  health.py  workflow.py
aigen-python-ai/app/graph/: __init__.py  state.py  workflow.py
aigen-python-ai/app/graph/nodes/: __init__.py  code_generator.py  image_collector.py  knowledge_retrieval.py  project_builder.py  prompt_enhancer.py  quality_check.py  router.py
aigen-python-ai/app/models/: __init__.py  enums.py  schemas.py
aigen-python-ai/app/services/: __init__.py  code_generator.py  llm_service.py  rag_service.py
aigen-python-ai/app/tools/: __init__.py  file_tools.py  image_tools.py
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
sql/: rag_init_postgres.sql
src/: style.css
src/main/resources/: application.yml
src/main/resources/mapper/: AppMapper.xml  ChatHistoryMapper.xml
src/views/: Home.vue
vue/: index.html  package.json
vue/src/: App.vue
vue/src/router/: index.ts
vue/src/views/: Chat.vue  Login.vue  Register.vue
(+167 files in other folders)
